Agregando colores con css a las diferentes etiquetas

--- a/index.html
+++ b/index.html
@@ -4,15 +4,11 @@
       <meta charset="utf-8"/>
       <title>Portafolio de Daniel Castiblanco</title>
       <link rel="stylesheet" href="css/estilos.css">
-      <style media="screen">
-        body{
-          background-color: purple;
-        }
-      </style>
+
   </head>
   <body>
     <!--Esta es la seccion del header-->
-    <header class="header" style="background-color: aquamarine;">
+    <header class="header" >
       <div class="header-wraper">
         <div class="header-logo">
           <img src="img/logo.png" alt="logo-portafolio" height="60"/>
@@ -38,7 +34,7 @@
     <!-- esta es la sección de la portada
     se abgregara csss
   -->
-  <section class="cover" style="background-color: green; border: 10px solid black">
+  <section class="cover" >
     <div class="cover-wr-apper">
       <div class="cover-wrapper">
         <div class="cover-photo-container">
