--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
       <meta charset="utf-8"/>
       <title>Portafolio de Daniel Castiblanco</title>
+      <link rel="stylesheet" href="css/reset.css">
       <link rel="stylesheet" href="css/estilos.css">
 
   </head>
