Editado el menu y logo de la cabecera

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <!--Esta es la seccion del header-->
     <header class="header" >
-      <div class="header-wraper">
+      <div class="header-wrapper">
         <div class="header-logo">
           <img src="img/logo.png" alt="logo-portafolio" height="60"/>
         </div>
