Se trabajo la foto y titulo principal, se ajusta el cover en css

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
         </div>
         <div class="cover-text">
-          <h2 class="covertitle">Daniel Castiblanco</h2>
-          <h1 class="cover-sub-title">Desarrollador web, programador en JAVA, músico y creador</h1>
+          <h2 class="covertitle">Daniel Armando Castiblanco Fajardo</h2>
+          <h1 class="cover-sub-title">Desarrollador web, programador en JAVA</h1>
         </div>
 
       </div>
