Se aplico el diseño del texto "sobre mi" y efecto de color al boton contactame

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             vehicula iaculis. Morbi non volutpat enim. Proin ultrices tristique mauris non sollicitudin. Aliquam et tempus orci, ac accumsan urna.
           </p>
           <div class="text-center">
-              <a href="mail:razzziel001@gmial.com" class="btn-blue">Contcto</a>
+              <a href="mail:razzziel001@gmial.com" class="btn-blue">Contacto</a>
           </div>
 
     </div>
