Se agregaron barras con porcentaje en las habilidades

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
       <meta charset="utf-8"/>
-      <title>Portafolio de Daniel Castiblanco Te amo Alejandrita linda</title>
+      <title>Portafolio de Daniel Castiblanco</title>
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/estilos.css">
 
@@ -90,7 +90,7 @@
           <span>Habilidades</span>
         </h1>
       </header>
-      <ul class="skill-wrapper">
+      <ul class="skills-wrapper">
           <li class="skills-item">
               <div class="skills-text">
                 <span class="skills-name">
@@ -101,7 +101,7 @@
                 </span>
               </div>
               <div class="skills-bar">
-                  <div class="skills-bar-fulling">
+                  <div class="skills-bar-fulling" style="width: 85%;">
                   </div>
               </div>
           </li>
@@ -116,7 +116,7 @@
 
               </div>
               <div class="skills-bar">
-                  <div class="skills-bar-fulling">
+                  <div class="skills-bar-fulling" style="width: 70%;">
                   </div>
               </div>
           </li>
@@ -126,12 +126,12 @@
                   JAVA
                 </span>
                 <span class="skills-score">
-                    90%
+                    65%
                 </span>
 
               </div>
               <div class="skills-bar">
-                  <div class="skills-bar-fulling">
+                  <div class="skills-bar-fulling" style="width: 65%;">
 
                   </div>
               </div>
@@ -142,12 +142,12 @@
                   UNITY
                 </span>
                 <span class="skills-score">
-                    70%
+                    50%
                 </span>
 
               </div>
               <div class="skills-bar">
-                  <div class="skills-bar-fulling">
+                  <div class="skills-bar-fulling" style="width: 50%;">
 
                   </div>
               </div>
