Se agrego diseño de la seccion portafolio

--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
         <span>Portafolio</span>
       </h1>
     </header>
-    <div class="work-wrapper">
-      <article class="work-item">
+    <div class="works-wrapper">
+      <article class="works-item">
         <div class="works-item-img-container">
-          <img src="img/work.png" alt="Trabajo desarrollo web1" class="work-item-img">
+          <img src="img/work.png" alt="Trabajo desarrollo web1" class="works-item-img">
         </div>
         <div class="works-item-description">
           <header>
@@ -178,9 +178,9 @@
           </div>
         </div>
       </article>
-      <article class="work-item">
+      <article class="works-item">
         <div class="works-item-img-container">
-          <img src="img/work.png" alt="Trabajo desarrollo web1" class="work-item-img">
+          <img src="img/work.png" alt="Trabajo desarrollo web1" class="works-item-img">
         </div>
         <div class="works-item-description">
           <header>
@@ -194,9 +194,9 @@
           </div>
         </div>
       </article>
-      <article class="work-item">
+      <article class="works-item">
         <div class="works-item-img-container">
-          <img src="img/work.png" alt="Trabajo desarrollo web1" class="work-item-img">
+          <img src="img/work.png" alt="Trabajo desarrollo web1" class="works-item-img">
         </div>
         <div class="works-item-description">
           <header>
