Se agrego diseño al formulario, nombre izquierda y correo derecha

--- a/index.html
+++ b/index.html
@@ -220,29 +220,30 @@
       </h1>
     </header>
     <form action="/messages.php" method="post" class="contact-form" >
-      <div class="contac-row">
-        <div class="contac-colum left">
+      <div class="contact-row">
+        <div class="contact-column left">
           <div>
               <label for="useremail">Correo</label>
       </div>
-        <div> <input id="useremail" name="useremail" type="email" class="contac-input-text" value="" required/>
+        <div> <input id="useremail" name="useremail" type="email" class="contac-input-text"  required/>
           </div>
         </div>
-      </div>
-      <div class="contac-row">
-
-        <div class="contac-colum left">
+        <div class="contact-column right">
 
         <div>
         <label for="username">Nombre</label>
         </div>
-        <div> <input id="username" name="username" type="text" class="contac-input-text" value="" required/>
+        <div> <input id="username" name="username" type="text" class="contac-input-text"  required/>
         </div>
         </div>
-
       </div>
+
+
+
+
+
       <div class="contact-row">
-        <div class="contact-colum">
+        <div class="contact-column ">
           <div >
             <label for="usermessage">Mensaje</label>
           </div>
