Finalizado el footer y la sección de mensajes

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
 
       <div class="contact-row">
-        <div class="contact-column ">
+        <div class="contact-column --width100">
           <div >
             <label for="usermessage">Mensaje</label>
           </div>
@@ -251,7 +251,7 @@
         </div>
       </div>
       <div class="text-center">
-        <input type="submit"  value="Enviar" />
+        <input class="btn-blue" type="submit"  value="Enviar" />
       </div>
     </form>
   </section>
@@ -259,7 +259,7 @@
   <footer class="footer">
     <div class="footer-wrapper">
       <p class="footer-text">
-        Hecho con &#x2764; por <a href="https://google.com" target="_blank" class="link">Pos google mientras </a>
+        Hecho con <span class='icon'>&#x2764;</span> por <a href="https://google.com" target="_blank" class="link">Pos google mientras </a>
       </p>
       <p>
         © Portafolio de Daniel Castiblanco
