Se cambio la descripcion sobre mi y la imagen de cabecera

--- a/index.html
+++ b/index.html
@@ -60,22 +60,18 @@
       </h1>
     </header>
     <div class="cover-description">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-         Proin nec sodales magna. Sed id pellentesque nibh. Nam tempus scelerisque est.
-          Nam luctus, tortor eget dictum porta, magna mauris interdum lectus, eu mollis orci erat id lectus.
-           Etiam a varius turpis, eget fermentum nulla. Ut vel semper quam. Nulla varius rhoncus tempus. Aliquam
-           vestibulum ligula a mauris vehicula iaculis. Morbi non volutpat enim. Proin ultrices tristique mauris non sollicitudin.
-            Aliquam et tempus orci, ac accumsan urna.
+      <p>Soy estudiante en sistemas con énfasis en programación y desarrollo web.
+         Tengo experiencia en mantenimiento de computadores, redacción de textos, corrección de ortografía y digitación de archivos.
+          Tengo conocimientos en tecnologías: Office, HTML5, Adobe Premier y Photoshop.
+          En la actualidad estoy especializándome para programación en Java, bases de datos y php; con el fin de diseñar software.
+
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Proin nec sodales magna. Sed id pellentesque nibh.
-            Nam tempus scelerisque est. Nam luctus, tortor eget
-            dictum porta, magna mauris interdum lectus, eu mollis
-            orci erat id lectus. Etiam a varius turpis,
-            eget fermentum nulla. Ut vel semper quam. Nulla varius
-            rhoncus tempus. Aliquam vestibulum ligula a mauris
-            vehicula iaculis. Morbi non volutpat enim. Proin ultrices tristique mauris non sollicitudin. Aliquam et tempus orci, ac accumsan urna.
+            También realizo proyectos en unity utilizando C#.
+            Busco desarrollar y trabajar en la programación de videojuegos; así que estoy abierto para incluir mi esfuerzo (por poco dinero)
+            en cualquier proyecto que se me necesite. En la sección de <a href="#skills" class= "link">Portafolio</a> podrá encontrar,
+            tanto los proyectyos finalizados como,
+            los diferentes proyectos de codigo abierto que estoy trabajando actualmente.
           </p>
           <div class="text-center">
               <a href="mail:razzziel001@gmial.com" class="btn-blue">Contacto</a>
