Se terminaron de cambiar los colores

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
       <p class="footer-text">
         Hecho con <span class='icon'>&#x2764;</span> por <a href="https://google.com" target="_blank" class="link">Pos google mientras </a>
       </p>
-      <p>
+      <p class="footer-text">
         © Portafolio de Daniel Castiblanco
       </p>
     </div>
