Introduje imagen de git hub NO AGREGE LINKS

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
     </header>
     <div class="cover-description">
       <p>Soy estudiante en sistemas con énfasis en programación y desarrollo web.
-         Tengo experiencia en mantenimiento de computadores, redacción de textos, corrección de ortografía y digitación de archivos.
+         Tengo experiencia en mantenimiento de computadores, diseño web e implementación de funcionalidades.
           Tengo conocimientos en tecnologías: Office, HTML5, Adobe Premier y Photoshop.
-          En la actualidad estoy especializándome para programación en Java, bases de datos y php; con el fin de diseñar software.
+          En la actualidad estoy especializándome con programación en Javascript, bases de datos y php; con el fin de diseñar software.
 
           </p>
           <p>
-            También realizo proyectos en unity utilizando C#.
+            También realizo proyectos en Unity Y JAVA utilizando programación orientada a objetos.
             Busco desarrollar y trabajar en la programación de videojuegos; así que estoy abierto para incluir mi esfuerzo (por poco dinero)
             en cualquier proyecto que se me necesite. En la sección de <a href="#skills" class= "link">Portafolio</a> podrá encontrar,
             tanto los proyectyos finalizados como,
@@ -160,17 +160,17 @@
     <div class="works-wrapper">
       <article class="works-item">
         <div class="works-item-img-container">
-          <img src="img/work.png" alt="Trabajo desarrollo web1" class="works-item-img">
+          <img src="img/git.jpg" alt="Trabajo desarrollo web1" class="works-item-img">
         </div>
         <div class="works-item-description">
           <header>
             <h2 class="work-item-title">
-              desarrollo web 1
+              Repositorios git
             </h2>
           </header>
-          <p class="work-item-client"> Para <a href="https://google.com" target="_blank">Nuestro cliente</a></p>
+          <p class="work-item-client"> Conoce mi <a href="https://google.com" target="_blank">contenido de codigo abierto</a></p>
           <div class="text-center">
-            <a href="https://google.com" class="btn-blue" target="_blank">Visitar web</a>
+            <a href="https://google.com" class="btn-blue" target="_blank">Repositorio git</a>
           </div>
         </div>
       </article>
