Algunas modificaciones estetida de imagenes, texto y direcciones de hipervinculos

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
     <div class="cover-description">
       <p>Soy estudiante en sistemas con énfasis en programación y desarrollo web.
          Tengo experiencia en mantenimiento de computadores, diseño web e implementación de funcionalidades.
-          Tengo conocimientos en tecnologías: Office, HTML5, Adobe Premier y Photoshop.
+          Tengo conocimientos en tecnologías: GitHub, HTML, CSS y TeamViewer.
           En la actualidad estoy especializándome con programación en Javascript, bases de datos y php; con el fin de diseñar software.
 
           </p>
           <p>
-            También realizo proyectos en Unity Y JAVA utilizando programación orientada a objetos.
+            También realizo proyectos de bots en discord; para esto: practico la programación orientada a objetos con Python o JAVA.
             Busco desarrollar y trabajar en la programación de videojuegos; así que estoy abierto para incluir mi esfuerzo (por poco dinero)
             en cualquier proyecto que se me necesite. En la sección de <a href="#skills" class= "link">Portafolio</a> podrá encontrar,
             tanto los proyectyos finalizados como,
@@ -93,11 +93,11 @@
                   HTML
                 </span>
                 <span class="skills-score">
-                    85%
+                    70%
                 </span>
               </div>
               <div class="skills-bar">
-                  <div class="skills-bar-fulling" style="width: 85%;">
+                  <div class="skills-bar-fulling" style="width: 70%;">
                   </div>
               </div>
           </li>
@@ -122,12 +122,12 @@
                   JAVA
                 </span>
                 <span class="skills-score">
-                    65%
+                    40%
                 </span>
 
               </div>
               <div class="skills-bar">
-                  <div class="skills-bar-fulling" style="width: 65%;">
+                  <div class="skills-bar-fulling" style="width: 40%;">
 
                   </div>
               </div>
@@ -135,15 +135,15 @@
           <li class="skills-item">
               <div class="skills-text">
                 <span class="skills-name">
-                  UNITY
+                  Python
                 </span>
                 <span class="skills-score">
-                    50%
+                    30%
                 </span>
 
               </div>
               <div class="skills-bar">
-                  <div class="skills-bar-fulling" style="width: 50%;">
+                  <div class="skills-bar-fulling" style="width: 30%;">
 
                   </div>
               </div>
@@ -168,39 +168,39 @@
               Repositorios git
             </h2>
           </header>
-          <p class="work-item-client"> Conoce mi <a href="https://google.com" target="_blank">contenido de codigo abierto</a></p>
+          <p class="work-item-client"> Conoce mi <a href="https://github.com/Twynzen" target="_blank">contenido de codigo abierto</a></p>
           <div class="text-center">
-            <a href="https://google.com" class="btn-blue" target="_blank">Repositorio git</a>
+            <a href="https://github.com/Twynzen" class="btn-blue" target="_blank">Repositorio git</a>
           </div>
         </div>
       </article>
       <article class="works-item">
         <div class="works-item-img-container">
-          <img src="img/work.png" alt="Trabajo desarrollo web1" class="works-item-img">
+          <img src="img/titulos.jpg" alt="Trabajo desarrollo web1" class="works-item-img">
         </div>
         <div class="works-item-description">
           <header>
             <h2 class="work-item-title">
-              desarrollo web 2
+              Certificados
             </h2>
           </header>
-          <p class="work-item-client"> Para <a href="https://google.com" target="_blank">Nuestro cliente</a></p>
+          <p class="work-item-client"> Mis <a href="https://google.com" target="_blank">Titulos</a></p>
           <div class="text-center">
-            <a href="https://google.com" class="btn-blue" target="_blank">Visitar web</a>
+            <a href="https://google.com" class="btn-blue" target="_blank">Ver documentos</a>
           </div>
         </div>
       </article>
       <article class="works-item">
         <div class="works-item-img-container">
-          <img src="img/work.png" alt="Trabajo desarrollo web1" class="works-item-img">
+          <img src="img/website.jpg" alt="Trabajo desarrollo web1" class="works-item-img">
         </div>
         <div class="works-item-description">
           <header>
             <h2 class="work-item-title">
-              desarrollo web 3
+              Proyectos terminados
             </h2>
           </header>
-          <p class="work-item-client"> Para <a href="https://google.com" target="_blank">Nuestro cliente</a></p>
+          <p class="work-item-client"> Para <a href="https://google.com" target="_blank">Pagina web LARM</a></p>
           <div class="text-center">
             <a href="https://google.com" class="btn-blue" target="_blank">Visitar web</a>
           </div>
